<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_navigation_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rabih.h.kiwan@outlook.com">rabih</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>


  <exec_depend>rosidl_typesupport_cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>rosidl_typesupport_cpp</build_depend>
  <build_depend>custom_interfaces</build_depend>
  <exec_depend>custom_interfaces</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
